--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Happy Valentine's Day everyone !</h1>
-    <div class="heart"></div>
-    <script src="day6.js"></script>
+    <!-- <h1>Happy Valentine's Day everyone !</h1>
+    <div class="heart"></div> -->
+    <script src="day7.js"></script>
   </body>
 </html>
